<resources>
    <string name="app_name">ProX</string>
    <string name="search">Search</string>
    <string name="category">Categories</string>
    <string name="categoryMore">View More</string>
    <string name="recent">Recent Feedbacks</string>
    <string name="author">Author Example</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="loginHere">Already have an account? <u>Login</u>.</string>
    <string name="signup">SignUp</string>
    <string name="signup_here">Don\'t have an account yet? <u>Sign Up</u>.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_example">Name Example</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="recent_feedbacks">Recent feedbacks\:\ </string>
    <string name="feedback_rate">Average feedback rate\:\ </string>
    <string name="favourite_categories">Favourite Categories</string>
    <string name="unknown">Unknown</string>
    <string name="zero">0</string>
    <string name="phone">Phone\:\ </string>
    <string name="return_back">Return Back</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel_changes">Cancel Changes</string>
    <string name="email_text">Email\:\ </string>
    <string name="full_name_text">Full Name\:\ </string>
    <string name="living_location">Location\:\ </string>
    <string name="price">Price</string>
    <string name="store">Store</string>
    <string name="_4_5_5_5k_rating">4.5/5 - 5K Rating</string>
    <string name="from_example">From Example</string>
    <string name="find_store">Find Store</string>
    <string name="product_description">Product Description</string>
    <string name="share_feedback">Share feedback!</string>
    <string name="type">Type:</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
</resources>