<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="25dp"
    android:paddingTop="?attr/actionBarSize">


    <!--app:icon="@drawable/home_icon" for picking icon-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/profile_icon" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_example"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/example_mail_com"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="3dp"
            android:text="@string/edit_profile"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recent_feedbacks_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/recent_feedbacks"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/recent_feedbacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/zero"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/average_rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/feedback_rate"
                android:textSize="26sp" />


            <TextView
                android:id="@+id/average_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/zero"
                android:textSize="26sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/favourite_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="7dp"
            android:text="@string/favourite_categories"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/favourite_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/unknown"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Living location: "
                android:textSize="26sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/unknown"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/phone"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/unknown"
                android:textSize="26sp" />

        </LinearLayout>


        <Button
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/darkWhite"
            android:text="@string/sign_out"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>