<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="25dp"
    android:paddingTop="?attr/actionBarSize">


    <!--app:icon="@drawable/home_icon" for picking icon-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/back_to_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="3dp"
            android:text="@string/return_back"
            android:textSize="18sp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_edited_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/profile_icon"
            android:background="?android:attr/selectableItemBackground"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000" />

        <TextView
            android:id="@+id/edit_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_profile"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="7dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/email_text"
                android:textSize="26sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_e"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/unknown"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_capture_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/full_name_text"
                android:textSize="26sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_text_e"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/unknown"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/phone"
                android:textSize="26sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_e"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/unknown"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/favourite_categories"
            android:layout_marginTop="7dp"
            android:textSize="26sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/favourite_text_e"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/unknown"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/favourite_categories_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/living_location"
                android:textSize="26sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_text_e"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/unknown"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/darkWhite"
            android:text="@string/save_changes"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>