<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="25dp"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/login"
            android:textSize="60dp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="#111"
            app:placeholderTextColor="#111"
            android:hint="@string/username"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="jelly_bean" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColor="#111"
            app:placeholderTextColor="#111"
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="jelly_bean" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/darkWhite"
            android:text="@string/login"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signup_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/signup_here"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>