<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductView"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="25dp"
    android:paddingTop="?attr/actionBarSize">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/back_to_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="3dp"
            android:text="@string/return_back"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/product_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/product_photo"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/name_example"
                    android:textColor="#111"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/product_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/from_example"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/product_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/_4_5_5_5k_rating"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Euro"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:background="@drawable/sec_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Product Category"
                android:textColor="#111"
                android:textSize="23sp"/>

            <TextView
                android:id="@+id/product_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="#111"
                android:text="@string/name_example"
                android:textSize="20sp"
                android:paddingVertical="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#111"
                android:text="@string/product_description"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#111"
                android:layout_gravity="left"
                android:text="@string/name_example"
                android:textSize="20sp"
                android:paddingVertical="10dp" />

            <Button
                android:id="@+id/find_store_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/darkWhite"
                android:text="@string/find_store"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/sec_shape">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image_product_fragment"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="left"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/profile_icon"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/already_have_it_share_feedback"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="13sp"
                    android:id="@+id/review_input"
                    android:layout_gravity="center"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/share_review_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:backgroundTint="@color/darkWhite"
                android:text="✓"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>

